project structure improvements